upgrade projen version

--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "projen": "projen"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.24.0",
   "devDependencies": {
-    "@gplassard/projen-extensions": "^0.1.23",
+    "@gplassard/projen-extensions": "^0.1.24",
     "projen": "^0.99.9"
   }
 }
