--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ build
 !/.github/workflows/build.yml
 !/.github/workflows/upgrade-nodejs-dependencies.yml
 !/.github/workflows/projen-synth.yml
+!/.github/workflows/release-open-api.yml
